--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2025.06.01"
 
 navigation-compose = "2.9.0"
 
+devtoolKsp = "2.2.0-2.0.2"
+
 koin = "4.1.0"
 ktor = "3.1.1"
 
@@ -18,6 +20,8 @@ coil = "3.2.0"
 
 kotlinx-serialization-json = "1.8.1"
 kotlinSerialization = "2.2.0"
+
+room = "2.7.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -60,11 +64,16 @@ coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinSerialization" }
+devtool-ksp = { id = "com.google.devtools.ksp", version.ref = "devtoolKsp" }
 
 [bundles]
 koin = [
@@ -87,5 +96,10 @@ ktor = [
     "ktor-client-cio",
     "ktor-client-content-negotiation",
     "ktor-serialization-kotlinx-json"
+]
+
+bundle-room = [
+    "androidx-room-ktx",
+    "androidx-room-runtime"
 ]
 
