--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,39 @@
 [versions]
-agp = "8.11.0"
-kotlin = "2.2.0"
-coreKtx = "1.16.0"
+agp = "8.11.2"
+kotlin = "2.3.0"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.1"
-activityCompose = "1.10.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.1"
 composeBom = "2025.06.01"
 
-navigation-compose = "2.9.0"
+material = "1.10.0"
+navigation-compose = "2.9.6"
 
-devtoolKsp = "2.2.0-2.0.2"
+devtoolKsp = "2.3.0"
 
-koin = "4.1.0"
+koin = "4.1.1"
+kotzilla = "1.4.2-RC1"
+
 ktor = "3.1.1"
 
-coil = "3.2.0"
+coil = "3.3.0"
 
-kotlinx-serialization-json = "1.8.1"
-kotlinSerialization = "2.2.0"
+kotlinx-serialization-json = "1.9.0"
+kotlinSerialization = "2.3.0"
 
-room = "2.7.2"
+room = "2.8.4"
 
 turbine = "1.2.1"
-mockitoCore = "5.18.0"
-mockitoKotlin = "5.4.0"
+mockitoCore = "5.21.0"
+mockitoKotlin = "6.1.0"
 kotlinxCoroutinesTest = "1.10.2"
+mapsplatformSecrets = "2.0.1"
+
+spotless = "8.1.0"
+ktlint = "11.6.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +49,7 @@ androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "material" }
 
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
@@ -68,6 +76,9 @@ coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
+
+kotzilla-sdk-compose = { group = "io.kotzilla", name = "kotzilla-sdk-compose", version.ref = "kotzilla" }
 
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -78,12 +89,18 @@ mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 
+spotless = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinSerialization" }
 devtool-ksp = { id = "com.google.devtools.ksp", version.ref = "devtoolKsp" }
+secrets-maps-platform = {id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "mapsplatformSecrets"}
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+kotzilla = { id = "io.kotzilla.kotzilla-plugin", version.ref = "kotzilla" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [bundles]
 koin = [
