--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -1,9 +1,9 @@
 name: LaunchXBuild
 on:
   pull_request :
-    branches : [ master ]
+    branches : [ main ]
   push :
-    branches: [ master ]
+    branches: [ main ]
 
 
 jobs:
